<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amazon Paddle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="userExample">i.e. vinitnayak</string>
    <string name="usernameID">usernameID</string>
    <string name="passwordID">passwordID</string>
    <string name="id">ID:</string>
    <string name="pw">PW:</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="loginID">loginID</string>
    <string name="regID">regID</string>
    <string name="register">Register!</string>
    <string name="registerID">RegisterID</string>
    <string name="rUsername">User: </string>
    <string name="rPassword">Pass: </string>
    <string name="rEmail">Email: </string>
    <string name="rUsernameID">rUsernameID</string>
    <string name="rPasswordID">rPasswordID</string>
    <string name="rEmailID">rEmailID</string>
    <string name="logo_desc">Amazon Paddle Logo</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profileNameID">profileNameID</string>
    <string name="profileRecordID">profileRecordID</string>
    <string name="profileEmailID">profileEmailID</string>
    <string name="profileUsersID">profileUsersID</string>
    <string name="profileChallengesID">profileChallengesID</string>
    <string name="profileUsers">Find Users</string>
    <string name="profileChallenges">Challenges</string>
    <string name="profileHistoryID">profileHistoryID</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_challenges">ChallengesActivity</string>
    <string name="dialog_sendChallenge_message">Challenge Details</string>
    <string name="dialog_sendChallenge_name">Game Name ("Vinit's Doom")</string>
    <string name="dialog_sendChallenge_comments">Game Time, Date, Etc</string>
    <string name="dialog_sendChallenge_submitLabel">Send Challenge</string>
    <string name="dialog_sendChallenge_cancelLabel">Cancel</string>
    <string name="title_activity_hh">HHActivity</string>
    <string name="dialog_acceptDecline">Accept the Challenge?</string>
    
</resources>
