<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" >

    <Button
        android:id="@+id/registerID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:onClick="goToProfileActivity"
        android:text="@string/register" />

    <TextView
        android:id="@+id/TextViewUser"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/registerID"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:text="@string/rUsername"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextViewEmail"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/TextViewUser"
        android:layout_below="@+id/TextViewUser"
        android:layout_marginTop="18dp"
        android:text="@string/rEmail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextViewPassword"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/TextViewEmail"
        android:layout_below="@+id/TextViewEmail"
        android:layout_marginTop="18dp"
        android:text="@string/rPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/rEmailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewEmail"
        android:layout_alignBottom="@+id/TextViewEmail"
        android:layout_alignRight="@+id/rUsernameID"
        android:ems="10" />

    <EditText
        android:id="@+id/rPasswordID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewPassword"
        android:layout_alignBottom="@+id/TextViewPassword"
        android:layout_alignLeft="@+id/rEmailID"
        android:ems="10" />

    <EditText
        android:id="@+id/rUsernameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewUser"
        android:layout_alignBottom="@+id/TextViewUser"
        android:layout_toRightOf="@+id/TextViewEmail"
        android:ems="10" />

</RelativeLayout>
