<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <EditText
        android:id="@+id/usernameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="158dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:hint="@string/userExample" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/usernameID"
        android:text="@string/pw"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/passwordID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/usernameID"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/username"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/usernameID"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/id"
        android:textSize="30sp" />

    <Button
        android:id="@+id/regID"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginID"
        android:layout_alignBottom="@+id/loginID"
        android:layout_alignRight="@+id/usernameID"
        android:layout_marginRight="22dp"
        android:onClick="goToRegistrationActivity"
        android:text="Register" />

    <Button
        android:id="@+id/loginID"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="21dp"
        android:onClick="goToProfileActivity"
        android:text="Login" />

</RelativeLayout>
